package DocumentManager;

public class Author {
    private String authorName;
    private String authorDoB;
    private String authorBio;

    /**
     *
     */
    public Author(String authorName) {
        this.authorName = authorName;
    }

    /**
     * Constructor.
     */
    public Author(String authorName, String authorDoB, String authorBio) {
        this.authorName = authorName;
        this.authorBio = authorBio;
        this.authorDoB = authorDoB;
    }

    /**
     * Getter n Setter.
     */
    public String getAuthorBio() {
        return authorBio;
    }

    public void setAuthorBio(String authorBio) {
        this.authorBio = authorBio;
    }

    public String getAuthorDoB() {
        return authorDoB;
    }

    public void setAuthorDoB(String authorDoB) {
        this.authorDoB = authorDoB;
    }

    public String getAuthorName() {
        return authorName;
    }

    public void setAuthorName(String authorName) {
        this.authorName = authorName;
    }

    /**
     * Get Information.
     */
    public String toString() {
        return this.authorName + " " + this.authorDoB + " " + this.authorBio;
    }

}
