package DocumentManager;

import java.util.HashMap;

public class DocumentManager {
    //So Luong sach da muon
    private HashMap<Book,Integer> Book;
}
