package LibraryException;

public class RegisterException extends LibraryManagementException {
    public RegisterException () {

    }
}
